# trickle_zip

./: .gitignore  README.md  architecture.puml  sonar-project.properties
.github/workflows/: rust.yml  sonarqube.yml
src/: bitstream.rs  deflate.rs  huffman.rs  lib.rs  lz77.rs
tests/: integration_test.rs
tricklezip/: Cargo.toml
tricklezip/src/: lib.rs
