[package]
name = "tricklezip"
version = "0.1.0"
edition = "2021"
description = "A relaxed compression library for embedded devices using DEFLATE algorithm"
license = "Apache-2.0"
keywords = ["compression", "deflate", "embedded", "no-std"]
categories = ["compression", "embedded", "no-std"]

[dependencies]
# Optional std support
[features]
default = []
std = []

[dev-dependencies]
# For testing only
